--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -72,6 +72,9 @@
       <setting name="PartNames" serializeAs="String">
         <value />
       </setting>
+      <setting name="AddnlValTitlePunct" serializeAs="String">
+        <value />
+      </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
