--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -60,6 +60,12 @@
       <setting name="ChapterName" serializeAs="String">
         <value />
       </setting>
+      <setting name="SeriesTitleLeft" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="LongBookTitle" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="PartNaming" serializeAs="String">
         <value>standard</value>
       </setting>
@@ -73,6 +79,9 @@
         <value />
       </setting>
       <setting name="AddnlValTitlePunct" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Genres" serializeAs="String">
         <value />
       </setting>
     </audiamus.aaxconv.Properties.Settings>
