--- a/src/AaxAudioConverter/Properties/Settings.settings
+++ b/src/AaxAudioConverter/Properties/Settings.settings
@@ -77,5 +77,8 @@
     <Setting Name="Genres" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="OnlineUpdate" Type="System.Nullable&lt;System.Boolean&gt;" Scope="User">
+      <Value Profile="(Default)">true</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
