--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -84,6 +84,21 @@
       <setting name="Genres" serializeAs="String">
         <value />
       </setting>
+      <setting name="FlatFolders" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FlatFolderNaming" serializeAs="String">
+        <value>author_book</value>
+      </setting>
+      <setting name="ExtraMetaFiles" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ShortChapterSec" serializeAs="String">
+        <value>25</value>
+      </setting>
+      <setting name="VeryShortChapterSec" serializeAs="String">
+        <value>10</value>
+      </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
