--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -99,6 +99,18 @@
       <setting name="VeryShortChapterSec" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="Latin1EncodingForPlaylist" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoLaunchPlayer" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="OnlineUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>      
+      <setting name="NamedChaptersAndAlwaysWithNumbers" serializeAs="String">
+        <value>False</value>
+      </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
