--- a/src/AaxAudioConverter/AaxAudioConverter.csproj
+++ b/src/AaxAudioConverter/AaxAudioConverter.csproj
@@ -150,9 +150,11 @@
     <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AboutForm.de.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ActivationCodeForm.de.resx">
       <DependentUpon>ActivationCodeForm.cs</DependentUpon>
