--- a/src/AaxAudioConverterLib/AaxAudioConverterLib.csproj
+++ b/src/AaxAudioConverterLib/AaxAudioConverterLib.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +50,8 @@
     <Compile Include="AaPictureExtractor.cs" />
     <Compile Include="ActivationCodeApp.cs" />
     <Compile Include="ActivationCodeRegistry.cs" />
+    <Compile Include="AudibleAppContentMetadata.cs" />
+    <Compile Include="ContentMetadataJson.cs" />
     <Compile Include="ExtraMetaFiles.cs" />
     <Compile Include="OnlineUpdate.cs" />
     <Compile Include="ChainPunctuation.cs" />
@@ -80,7 +85,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
