--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -105,12 +105,15 @@
       <setting name="AutoLaunchPlayer" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="OnlineUpdate" serializeAs="String">
-        <value>True</value>
-      </setting>      
-      <setting name="NamedChaptersAndAlwaysWithNumbers" serializeAs="String">
+      <setting name="M4B" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="OnlineUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="NamedChaptersAndAlwaysWithNumbers" serializeAs="String">
+        <value>False</value>
+      </setting>      
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
