--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -64,7 +64,7 @@
         <value>False</value>
       </setting>
       <setting name="LongBookTitle" serializeAs="String">
-        <value>False</value>
+        <value>no</value>
       </setting>
       <setting name="PartNaming" serializeAs="String">
         <value>standard</value>
@@ -108,12 +108,6 @@
       <setting name="M4B" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="OnlineUpdate" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="NamedChaptersAndAlwaysWithNumbers" serializeAs="String">
-        <value>False</value>
-      </setting>      
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
