--- a/src/AaxAudioConverterLib/packages.config
+++ b/src/AaxAudioConverterLib/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
-  <package id="TagLibSharp-patched" version="2.2.0-beta.1" targetFramework="net471" />
+  <package id="TagLibSharp" version="2.2.0" targetFramework="net471" />
 </packages>
