--- a/src/TreeDecomposition/TreeDecomposition.csproj
+++ b/src/TreeDecomposition/TreeDecomposition.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{64C35BCC-BF7A-47BE-89F2-7ABB470BDB0B}</ProjectGuid>
+    <ProjectGuid>{BBEFB463-1F6C-4D35-AF83-B5C3CEA9915E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>audiamus.aux</RootNamespace>
-    <AssemblyName>UtilLib</AssemblyName>
+    <RootNamespace>audiamus.aux.diagn</RootNamespace>
+    <AssemblyName>TreeDecomposition</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -18,10 +18,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,11 +30,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,30 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplEnv.cs" />
-    <Compile Include="ArgParser.cs" />
-    <Compile Include="BigEndianReader.cs" />
-    <Compile Include="BooleanYesNoConverter.cs" />
-    <Compile Include="ChainPunctuation.cs" />
-    <Compile Include="DefaultSettings.cs" />
-    <Compile Include="Encoding.cs" />
-    <Compile Include="EnumChainTypeConverter.cs" />
-    <Compile Include="EnumUtil.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Indent.cs" />
-    <Compile Include="InteractionMessage.cs" />
-    <Compile Include="LocalFileSettingsProvider.cs" />
-    <Compile Include="Logging.cs" />
-    <Compile Include="EnumConverter.cs" />
-    <Compile Include="ProcessHost.cs" />
-    <Compile Include="IInteractionCallback.cs" />
-    <Compile Include="InteractionCallback.cs" />
-    <Compile Include="ProcessList.cs" />
+    <Compile Include="AbstractPrimitiveTypes.cs" />
+    <Compile Include="CustomAttributes.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResourceGuard.cs" />
-    <Compile Include="ResourceManagerEx.cs" />
-    <Compile Include="Singleton.cs" />
-    <Compile Include="Temp.cs" />
+    <Compile Include="TreeDecomposition.cs" />
+    <Compile Include="TreeDecompositionExtension.cs" />
+    <Compile Include="ToStringConverter.cs" />
+    <Compile Include="TypeExtension.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuxLib\AuxLib.csproj">
+      <Project>{64c35bcc-bf7a-47be-89f2-7abb470bdb0b}</Project>
+      <Name>AuxLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
