--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -93,20 +93,38 @@
       <setting name="ExtraMetaFiles" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="OnlineUpdate" serializeAs="String">
+        <value>promptForInstall</value>
+      </setting>
       <setting name="ShortChapterSec" serializeAs="String">
         <value>25</value>
       </setting>
       <setting name="VeryShortChapterSec" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="VerifyAdjustChapters" serializeAs="String">
+        <value>splitChapterMode</value>
+      </setting>
       <setting name="Latin1EncodingForPlaylist" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="NamedChapters" serializeAs="String">
+        <value>yes</value>
       </setting>
       <setting name="AutoLaunchPlayer" serializeAs="String">
         <value>True</value>
       </setting>
       <setting name="M4B" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="AaxCopyMode" serializeAs="String">
+        <value>no</value>
+      </setting>
+      <setting name="AaxCopyDirectory" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Version" serializeAs="String">
+        <value />
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
