--- a/src/AaxAudioConverter/AaxAudioConverter.csproj
+++ b/src/AaxAudioConverter/AaxAudioConverter.csproj
@@ -154,6 +154,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="WhatsNewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WhatsNewForm.Designer.cs">
+      <DependentUpon>WhatsNewForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutForm.de.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -233,6 +239,13 @@
       <DependentUpon>SettingsForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="WhatsNewForm.de.resx">
+      <DependentUpon>WhatsNewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WhatsNewForm.resx">
+      <DependentUpon>WhatsNewForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="AaxAudioConverter.de.odt" />
     <None Include="AaxAudioConverter.de.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -289,6 +302,12 @@
     <None Include="Resources\blank.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AaxAudioConverter.latest.de.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="AaxAudioConverter.latest.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="ffmpeg.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
