--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -126,6 +126,9 @@
       <setting name="Version" serializeAs="String">
         <value />
       </setting>
+      <setting name="NoStartupTip" serializeAs="String">
+        <value>False</value>
+      </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
   <applicationSettings>
