--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -102,10 +102,13 @@
       <setting name="VeryShortChapterSec" serializeAs="String">
         <value>10</value>
       </setting>
-      <setting name="VerifyAdjustChapters" serializeAs="String">
-        <value>splitChapterMode</value>
+      <setting name="VerifyAdjustChapterMarks" serializeAs="String">
+        <value>splitChapterOrTimeMode</value>
       </setting>
       <setting name="Latin1EncodingForPlaylist" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="IntermedCopySingle" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="NamedChapters" serializeAs="String">
@@ -126,8 +129,14 @@
       <setting name="Version" serializeAs="String">
         <value />
       </setting>
+      <setting name="VerifyAdjustChapters" serializeAs="String">
+        <value>splitChapterMode</value>
+      </setting>
       <setting name="NoStartupTip" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="SettingsTab" serializeAs="String">
+        <value>0</value>
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
