--- a/src/AaxAudioConverter/App.config
+++ b/src/AaxAudioConverter/App.config
@@ -27,6 +27,9 @@
       <setting name="FFMpegDirectory" serializeAs="String">
         <value />
       </setting>
+      <setting name="RelaxedFFmpegVersionCheck" serializeAs="String">
+        <value>False</value>
+      </setting>
       <setting name="ConvFormat" serializeAs="String">
         <value>mp3</value>
       </setting>
@@ -111,8 +114,17 @@
       <setting name="IntermedCopySingle" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="FixAACEncoding" serializeAs="String">
+        <value>withIntermediateCopy</value>
+      </setting>
       <setting name="NamedChapters" serializeAs="String">
         <value>yes</value>
+      </setting>
+      <setting name="VariableBitRate" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ReducedBitRate" serializeAs="String">
+        <value>off</value>
       </setting>
       <setting name="AutoLaunchPlayer" serializeAs="String">
         <value>True</value>
@@ -129,14 +141,23 @@
       <setting name="Version" serializeAs="String">
         <value />
       </setting>
-      <setting name="VerifyAdjustChapters" serializeAs="String">
-        <value>splitChapterMode</value>
-      </setting>
-      <setting name="NoStartupTip" serializeAs="String">
-        <value>False</value>
-      </setting>
       <setting name="SettingsTab" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="PreferEmbeddedChapterTimes" serializeAs="String">
+        <value>no</value>
+      </setting>
+      <setting name="TagArtist" serializeAs="String">
+        <value>author__narrator__</value>
+      </setting>
+      <setting name="TagAlbumArtist" serializeAs="String">
+        <value>none</value>
+      </setting>
+      <setting name="TagComposer" serializeAs="String">
+        <value>none</value>
+      </setting>
+      <setting name="TagConductor" serializeAs="String">
+        <value>none</value>
       </setting>
     </audiamus.aaxconv.Properties.Settings>
   </userSettings>
