--- a/src/AaxAudioConverter/Properties/Settings.settings
+++ b/src/AaxAudioConverter/Properties/Settings.settings
@@ -14,6 +14,9 @@
     <Setting Name="FFMpegDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="RelaxedFFmpegVersionCheck" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
     <Setting Name="ConvFormat" Type="audiamus.aaxconv.lib.EConvFormat" Scope="User">
       <Value Profile="(Default)">mp3</Value>
     </Setting>
@@ -110,6 +113,12 @@
     <Setting Name="NamedChapters" Type="audiamus.aaxconv.lib.ENamedChapters" Scope="User">
       <Value Profile="(Default)">yes</Value>
     </Setting>
+    <Setting Name="VariableBitRate" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ReducedBitRate" Type="audiamus.aaxconv.lib.EReducedBitRate" Scope="User">
+      <Value Profile="(Default)">off</Value>
+    </Setting>
     <Setting Name="AutoLaunchPlayer" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -128,11 +137,23 @@
     <Setting Name="ShowStartupTip" Type="System.Nullable&lt;System.Boolean&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="NoStartupTip" Type="System.String" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
     <Setting Name="SettingsTab" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="PreferEmbeddedChapterTimes" Type="audiamus.aaxconv.lib.EPreferEmbeddedChapterTimes" Scope="User">
+      <Value Profile="(Default)">no</Value>
+    </Setting>
+    <Setting Name="TagArtist" Type="audiamus.aaxconv.lib.ERoleTagAssignment" Scope="User">
+      <Value Profile="(Default)">author__narrator__</Value>
+    </Setting>
+    <Setting Name="TagAlbumArtist" Type="audiamus.aaxconv.lib.ERoleTagAssignment" Scope="User">
+      <Value Profile="(Default)">none</Value>
+    </Setting>
+    <Setting Name="TagComposer" Type="audiamus.aaxconv.lib.ERoleTagAssignment" Scope="User">
+      <Value Profile="(Default)">none</Value>
+    </Setting>
+    <Setting Name="TagConductor" Type="audiamus.aaxconv.lib.ERoleTagAssignment" Scope="User">
+      <Value Profile="(Default)">none</Value>
     </Setting>
   </Settings>
 </SettingsFile>
